# fightbot

./: Cargo.toml  README.md  config.yml
examples/: modify_resp.rs
src/: config.rs  html_processor.rs  id_mapping.rs  main.rs  proxy_service.rs  test_page.html
