[package]
name = "id-obfuscating-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.1", features = ["proxy"] }
pingora-http = "0.1"
pingora-core = "0.1"
pingora-proxy = "0.1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.7", features = ["v4"] }
scraper = "0.18"
regex = "1.10"
lazy_static = "1.4"
env_logger = "0.10"
async-trait = "0.1"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "4.0", features = ["derive"] }
url = "2.5"
anyhow="1"

